feat: add knowledge retrieval operations